modified logo image, also trying to fix scrolling on mobile

--- a/process/sass/style.scss
+++ b/process/sass/style.scss
@@ -234,7 +234,7 @@ Main Components
     height: 100%;
     width: 100%;
     // height: auto;
-    position: fixed;
+    position: absolute;
     background-color: $color-main;
 
   .splashWrap {
